--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,16 @@ html {
     scroll-behavior: smooth;
 }
 body {
-    background: var(--color-3);
+    background-color: var(--color-3);
+    background-image: repeating-linear-gradient(
+        45deg, 
+        rgba(0, 0, 0, 0.03), 
+        rgba(0, 0, 0, 0.03) 7px, 
+        transparent 1px, 
+        transparent 20px
+    );
+    background-size: 20px 20px;
+    
     font-family: var(--font-1);
     font-size: var(--normal-font-size);
     color: var(--color-2);
