--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -392,11 +392,12 @@ header, main, footer{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    gap: .5rem;
+    margin: .5rem auto;
 }
 .tabelaX{
     /* border: 1px solid var(--color-2); */
     background: var(--color-3);
-    margin: .5rem auto;
     min-width: 25rem;
     display: flex;
     flex-direction: column;
