--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,6 +179,7 @@ header, main, footer{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 1rem;
     background: linear-gradient(to right, var(--color-3), var(--color-11), var(--color-3));
     padding: .7rem;
@@ -202,10 +203,10 @@ header, main, footer{
 /* TABELA MATA MATA */
 .tabelaMataMata{
     width: 100%;
-    margin: 16rem auto 1.5rem auto;
+    margin: 15rem auto 1.5rem auto;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     gap: 1.5rem;
     flex-wrap: wrap;
 }
@@ -269,9 +270,22 @@ header, main, footer{
 .resultadoFinal{
     margin-top: .6rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    gap: 1rem;
     width: 90%;
+}
+.resultadoFinal img{
+    height: 2rem;
+    width: auto;
+}
+.selecaoFinal1{
+    position: absolute;
+    right: 1rem;
+}
+.selecaoFinal2{
+    position: absolute;
+    left: 1rem;
 }
 
 .tacaFinal{
@@ -377,8 +391,8 @@ header, main, footer{
     padding: .3rem;
 }
 .cardSemi img{
-    width: 40px;
-    height: 40px;
+    height: 2rem;
+    width: 2rem;
     border-radius: .3rem;
     opacity: 50%;
     background: rgb(39, 39, 39);
@@ -390,14 +404,13 @@ header, main, footer{
 .tabelaJogos{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
-    gap: .5rem;
-    margin: .5rem auto;
 }
 .tabelaX{
     /* border: 1px solid var(--color-2); */
     background: var(--color-3);
+    margin: .5rem;
     min-width: 25rem;
     display: flex;
     flex-direction: column;
