--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -408,7 +408,7 @@ header, main, footer{
     flex-wrap: wrap;
 }
 .tabelaX{
-    /* border: 1px solid var(--color-2); */
+    position: relative;
     background: var(--color-3);
     margin: .5rem;
     min-width: 25rem;
@@ -552,6 +552,24 @@ header, main, footer{
     width: 2rem;
     height: 2rem;
     border-radius: 50%;
+}
+
+.infoRodada{
+    position: absolute;
+    text-align: center;
+    color: #ce3131;
+    text-align: center;
+    width: 100%;
+    bottom: .25rem;
+    font-size: var(--small-font-size);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: .25rem;
+}
+.infoRodada img{
+    height: var(--small-font-size);
+    width: var(--small-font-size);
 }
 
 .tabelaPAA{
