--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -591,6 +591,7 @@ header, main, footer{
 .tabelaPontos table tr td{
     padding: .4rem;
     text-align: center;
+    word-wrap:break-word;
 }
 .tabelaPontosX{
     position: relative;
@@ -630,12 +631,12 @@ header, main, footer{
     flex-wrap: wrap;
     margin-top: 1.5rem;
 }
-.corClassificadoGrupo{
+.tagVerde{
     max-height: 50%;
     padding: 0rem;
     border-right: 2px solid #01b961;
 }
-.corDesclassificadoGrupo{
+.tagVermelha{
     max-height: 50%;
     padding: 0rem;
     border-right: 2px solid #b90101;
