--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -765,6 +765,7 @@ header, main, footer{
 .btnDownload{
     display: flex;
     justify-content: center;
+    gap: .5rem;
     padding: 10px 20px;
     font-size: var(--normal-font-size);
     color: #fff;
@@ -775,7 +776,10 @@ header, main, footer{
     text-decoration: none;
     transition: ease-in-out .4s;
 }
-
 .btnDownload:hover{
     transform: translateY(-.15rem);
+}
+.btnDownload img{
+    height: var(--normal-font-size);
+    width: var(--normal-font-size);
 }
