--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,9 +393,8 @@ header, main, footer{
 .cardSemi img{
     height: 2rem;
     width: 2rem;
-    border-radius: .3rem;
+    border-radius: 50%;
     background: rgb(39, 39, 39);
-    box-shadow: 0px 0px .5rem rgb(0, 0, 0);
 }
 
 /* CARD TABELA DE JOGOS */
